// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration test for complex commands runs build 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "dryRun >> tauri-bundler [build]: echo the files in the tauri-bundler folder are",
    ],
    Array [
      "dryRun >> tauri-bundler [build]: ls",
    ],
    Array [
      "dryRun >> tauri [build]: echo the files in the tauri folder are",
    ],
    Array [
      "dryRun >> tauri [build]: ls",
    ],
    Array [
      "dryRun >> tauri-api [build]: echo the files in the tauri-api folder are",
    ],
    Array [
      "dryRun >> tauri-api [build]: ls",
    ],
    Array [
      "dryRun >> tauri-utils [build]: echo the files in the tauri-utils folder are",
    ],
    Array [
      "dryRun >> tauri-utils [build]: ls",
    ],
    Array [
      "dryRun >> tauri-updater [build]: echo the files in the tauri-updater folder are",
    ],
    Array [
      "dryRun >> tauri-updater [build]: ls",
    ],
  ],
  "covectorReturn": Object {
    "tauri": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-api": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-bundler": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-updater": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-utils": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri.js": Object {
      "command": false,
      "postcommand": false,
      "precommand": false,
    },
  },
}
`;

exports[`integration test for complex commands runs publish 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "Checking if tauri-bundler@0.6.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-bundler [prepublish]: echo premode for tauri-bundler",
    ],
    Array [
      "Checking if tauri@0.5.2 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri@0.5.2 is already published. Skipping.",
    ],
    Array [
      "Checking if tauri-api@0.5.1 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-api [prepublish]: echo premode for tauri-api",
    ],
    Array [
      "Checking if tauri-utils@0.5.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-utils [prepublish]: echo premode for tauri-utils",
    ],
    Array [
      "dryRun >> tauri.js [publish]: echo publishing tauri.js would happen here",
    ],
    Array [
      "Checking if tauri-bundler@0.6.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-bundler [publish]: echo publishing tauri-bundler would happen here",
    ],
    Array [
      "dryRun >> tauri-bundler [publish]: echo running in ./cli/tauri-bundler",
    ],
    Array [
      "dryRun >> tauri-bundler [publish]: ls",
    ],
    Array [
      "Checking if tauri@0.5.2 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri@0.5.2 is already published. Skipping.",
    ],
    Array [
      "Checking if tauri-api@0.5.1 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-api [publish]: echo publishing tauri-api would happen here",
    ],
    Array [
      "dryRun >> tauri-api [publish]: echo running in ./tauri-api",
    ],
    Array [
      "dryRun >> tauri-api [publish]: ls",
    ],
    Array [
      "Checking if tauri-utils@0.5.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-utils [publish]: echo publishing tauri-utils would happen here",
    ],
    Array [
      "dryRun >> tauri-utils [publish]: echo running in ./tauri-utils",
    ],
    Array [
      "dryRun >> tauri-utils [publish]: ls",
    ],
    Array [
      "Checking if tauri-bundler@0.6.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-bundler [postpublish]: echo postmode for tauri-bundler",
    ],
    Array [
      "Checking if tauri@0.5.2 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri@0.5.2 is already published. Skipping.",
    ],
    Array [
      "Checking if tauri-api@0.5.1 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-api [postpublish]: echo postmode for tauri-api",
    ],
    Array [
      "Checking if tauri-utils@0.5.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-utils [postpublish]: echo postmode for tauri-utils",
    ],
  ],
  "covectorReturn": Object {
    "tauri": Object {
      "command": false,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-api": Object {
      "command": true,
      "postcommand": true,
      "precommand": true,
    },
    "tauri-bundler": Object {
      "command": true,
      "postcommand": true,
      "precommand": true,
    },
    "tauri-updater": Object {
      "command": false,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-utils": Object {
      "command": true,
      "postcommand": true,
      "precommand": true,
    },
    "tauri.js": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
  },
}
`;

exports[`integration test for complex commands runs test 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "No commands configured to run on [test].",
    ],
  ],
  "covectorReturn": "No commands configured to run on [test].",
}
`;

exports[`integration test for complex commands runs version 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "tauri",
      "pipe",
      Object {
        "pkg": Object {
          "command": true,
          "dependencies": Array [
            "tauri-api",
          ],
          "manager": "rust",
          "path": "./tauri",
          "pkg": "tauri",
          "postcommand": null,
          "precommand": null,
        },
        "release": Object {
          "changes": Array [
            Object {
              "releases": Object {
                "tauri": "minor",
              },
              "summary": "Summary about the changes in tauri",
            },
          ],
          "parents": Array [
            "tauri.js",
          ],
          "type": "minor",
        },
      },
    ],
    Array [
      "tauri-updater",
      "pipe",
      Object {
        "pkg": Object {
          "command": true,
          "dependencies": undefined,
          "manager": "rust",
          "path": "./tauri-updater",
          "pkg": "tauri-updater",
          "postcommand": null,
          "precommand": null,
        },
        "release": Object {
          "changes": Array [
            Object {
              "releases": Object {
                "tauri-updater": "patch",
              },
              "summary": "Summary about the changes in tauri-updater",
            },
          ],
          "parents": Array [],
          "type": "patch",
        },
      },
    ],
    Array [
      "tauri.js",
      "pipe",
      Object {
        "pkg": Object {
          "command": true,
          "dependencies": Array [
            "tauri",
          ],
          "manager": "javascript",
          "path": "./cli/tauri.js",
          "pkg": "tauri.js",
          "postcommand": null,
          "precommand": null,
        },
        "release": Object {
          "changes": Array [
            Object {
              "releases": Object {
                "tauri": "minor",
              },
              "summary": "Summary about the changes in tauri",
            },
          ],
          "parents": Array [],
          "type": "minor",
        },
      },
    ],
    Array [
      "bumping tauri with minor",
    ],
    Array [
      "bumping tauri-updater with patch",
    ],
    Array [
      "bumping tauri.js with minor",
    ],
    Array [
      "tauri planned to be bumped to 0.6.0",
    ],
    Array [
      "tauri.js planned to be bumped to 0.7.0",
    ],
    Array [
      "tauri-updater planned to be bumped to 0.4.3",
    ],
    Array [
      "Could not load the CHANGELOG.md. Creating one.",
    ],
    Array [
      "Could not load the CHANGELOG.md. Creating one.",
    ],
    Array [
      "Could not load the CHANGELOG.md. Creating one.",
    ],
  ],
  "covectorReturn": Array [
    Object {
      "name": "tauri",
      "pkg": Object {
        "build-dependencies": Object {
          "tauri_includedir_codegen": "0.5.2",
        },
        "dependencies": Object {
          "anyhow": "1.0.31",
          "base64": "0.12.1",
          "envmnt": "0.8.2",
          "lazy_static": "1.4.0",
          "phf": "0.8.0",
          "serde": Object {
            "__tomlInline": true,
            "features": Array [
              "derive",
            ],
            "version": "1.0",
          },
          "serde_json": "1.0",
          "tauri-api": Object {
            "__tomlInline": true,
            "path": "../tauri-api",
            "version": "0.5",
          },
          "tauri_includedir": "0.5.0",
          "thiserror": "1.0.19",
          "threadpool": "1.8",
          "tiny_http": Object {
            "__tomlInline": true,
            "optional": true,
            "version": "0.7",
          },
          "uuid": Object {
            "__tomlInline": true,
            "features": Array [
              "v4",
            ],
            "version": "0.8.1",
          },
          "web-view": "=0.6.2",
          "webbrowser": "0.5.2",
          "webview-sys": "=0.5.0",
        },
        "dev-dependencies": Object {
          "proptest": "0.9.6",
          "serde": Object {
            "__tomlInline": true,
            "features": Array [
              "derive",
            ],
            "version": "1.0",
          },
          "serde_json": "1.0",
          "tauri": Object {
            "__tomlInline": true,
            "features": Array [
              "all-api",
              "edge",
            ],
            "path": ".",
          },
        },
        "example": Array [
          Object {
            "name": "communication",
            "path": "examples/communication/src-tauri/src/main.rs",
          },
        ],
        "features": Object {
          "all-api": Array [],
          "copy-file": Array [],
          "create-dir": Array [],
          "edge": Array [
            "web-view/edge",
          ],
          "embedded-server": Array [
            "tiny_http",
          ],
          "event": Array [],
          "execute": Array [],
          "no-server": Array [],
          "open": Array [],
          "open-dialog": Array [],
          "read-binary-file": Array [],
          "read-dir": Array [],
          "read-text-file": Array [],
          "remove-dir": Array [],
          "remove-file": Array [],
          "rename-file": Array [],
          "save-dialog": Array [],
          "set-title": Array [],
          "updater": Array [],
          "write-file": Array [],
        },
        "package": Object {
          "authors": "test",
          "description": "Make tiny, secure apps for all desktop platforms with Tauri",
          "edition": "2018",
          "exclude": Array [
            "test/fixture/**",
          ],
          "homepage": "https://tauri.studio",
          "license": "MIT",
          "metadata": Object {
            "docs": Object {
              "rs": Object {
                "features": Array [
                  "all-api",
                ],
              },
            },
          },
          "name": "tauri",
          "repository": "https://github.com/tauri-apps/tauri",
          "version": "0.6.0",
        },
      },
      "version": "0.6.0",
    },
    Object {
      "name": "tauri.js",
      "pkg": Object {
        "bin": Object {
          "tauri": "./bin/tauri.js",
        },
        "bugs": Object {
          "url": "https://github.com/tauri-apps/tauri/issues",
        },
        "contributors": Array [
          "test",
        ],
        "dependencies": Object {
          "@tauri-apps/tauri-inliner": "1.14.1",
          "@tauri-apps/toml": "2.2.4",
          "chalk": "4.0.0",
          "chokidar": "3.4.0",
          "cross-spawn": "7.0.3",
          "fast-glob": "3.2.2",
          "fs-extra": "9.0.1",
          "http-proxy": "1.18.1",
          "imagemin": "7.0.1",
          "imagemin-optipng": "8.0.0",
          "imagemin-pngquant": "9.0.0",
          "imagemin-zopfli": "7.0.0",
          "is-png": "2.0.0",
          "isbinaryfile": "4.0.6",
          "jsdom": "16.2.2",
          "lodash": "4.17.15",
          "minimist": "1.2.5",
          "ms": "2.1.2",
          "png2icons": "2.0.1",
          "read-chunk": "3.2.0",
          "sharp": "0.25.3",
          "webpack-merge": "4.2.2",
          "webpack-shell-plugin": "0.5.0",
        },
        "description": "Multi-binding collection of libraries and templates for building Tauri apps",
        "devDependencies": Object {
          "@babel/core": "7.10.2",
          "@babel/preset-env": "7.10.2",
          "@babel/preset-typescript": "7.10.1",
          "@types/cross-spawn": "6.0.2",
          "@types/fs-extra": "9.0.1",
          "@types/http-proxy": "1.17.4",
          "@types/imagemin": "7.0.0",
          "@types/imagemin-optipng": "5.2.0",
          "@types/jsdom": "16.2.3",
          "@types/lodash": "4.14.155",
          "@types/ms": "0.7.31",
          "@types/sharp": "0.25.0",
          "@types/webpack-merge": "4.1.5",
          "@typescript-eslint/eslint-plugin": "3.1.0",
          "@typescript-eslint/parser": "3.1.0",
          "babel-jest": "26.0.1",
          "dotenv": "8.2.0",
          "eslint": "7.1.0",
          "eslint-config-standard-with-typescript": "18.0.2",
          "eslint-plugin-import": "2.20.2",
          "eslint-plugin-lodash-template": "0.18.0",
          "eslint-plugin-node": "11.1.0",
          "eslint-plugin-promise": "4.2.1",
          "eslint-plugin-security": "1.4.0",
          "eslint-plugin-standard": "4.0.1",
          "husky": "4.2.5",
          "is-running": "2.1.0",
          "jest": "26.0.1",
          "jest-mock-process": "1.4.0",
          "lint-staged": "10.2.8",
          "lockfile-lint": "4.3.6",
          "promise": "8.1.0",
          "raw-loader": "4.0.1",
          "ts-loader": "7.0.5",
          "typescript": "3.9.3",
          "webpack": "4.43.0",
          "webpack-cli": "3.3.11",
          "webpack-node-externals": "1.7.2",
        },
        "funding": Object {
          "type": "opencollective",
          "url": "https://opencollective.com/tauri",
        },
        "homepage": "https://github.com/tauri-apps/tauri#readme",
        "husky": Object {
          "hooks": Object {
            "pre-commit": "lint-staged",
          },
        },
        "license": "MIT",
        "lint-staged": Array [
          "eslint --fix",
        ],
        "name": "tauri",
        "repository": Object {
          "type": "git",
          "url": "git+https://github.com/tauri-apps/tauri.git",
        },
        "scripts": Object {
          "build": "webpack --progress",
          "build-release": "yarn build --display none --progress false",
          "build:tauri[rust]": "cd ../tauri && TAURI_DIST_DIR=../../test/fixture/dist TAURI_DIR=../test/fixture cargo publish --dry-run --allow-dirty",
          "lint": "eslint --ext ts ./src/**/*.ts",
          "lint-fix": "eslint --fix --ext ts ./src/**/*.ts",
          "lint:lockfile": "lockfile-lint --path yarn.lock --type yarn --validate-https --allowed-hosts npm yarn",
          "prepublishOnly": "yarn build-release",
          "pretest": "yarn build",
          "test": "jest --runInBand --no-cache --testPathIgnorePatterns=\\"(build|dev)\\"",
          "test:local": "jest --runInBand",
        },
        "version": "0.7.0",
      },
      "version": "0.7.0",
    },
    Object {
      "name": "tauri-updater",
      "pkg": Object {
        "dependencies": Object {
          "anyhow": "1.0.31",
          "attohttpc": Object {
            "__tomlInline": true,
            "features": Array [
              "json",
              "compress",
            ],
            "version": "0.10.1",
          },
          "serde": "1.0",
          "serde_json": "1.0",
          "tauri-api": Object {
            "__tomlInline": true,
            "path": "../tauri-api",
            "version": "0.5",
          },
          "tauri-utils": Object {
            "__tomlInline": true,
            "path": "../tauri-utils",
            "version": "0.5",
          },
          "tempdir": "0.3",
          "thiserror": "1.0.19",
          "zip": "0.5.3",
        },
        "package": Object {
          "authors": "test",
          "description": "Updater for Tauri",
          "edition": "2018",
          "exclude": Array [
            "test/fixture/**",
          ],
          "homepage": "https://tauri.studio",
          "license": "MIT",
          "name": "tauri-updater",
          "repository": "https://github.com/tauri-apps/tauri",
          "version": "0.4.3",
        },
      },
      "version": "0.4.3",
    },
  ],
}
`;

exports[`integration test in --dry-run mode passes correct config for js and rust 1`] = `
Object {
  "consoleDir": Array [
    Array [
      Array [
        Object {
          "releases": Object {
            "tauri": "minor",
          },
          "summary": "Summary about the changes in tauri",
        },
      ],
    ],
    Array [
      Array [
        Object {
          "releases": Object {
            "tauri-updater": "patch",
          },
          "summary": "Summary about the changes in tauri-updater",
        },
      ],
    ],
  ],
  "consoleLog": Array [
    Array [
      "changes:",
    ],
    Array [
      "tauri => minor",
    ],
    Array [
      "tauri-updater => patch",
    ],
  ],
  "covectorReturn": "There are 2 changes which include tauri with minor, tauri-updater with patch",
}
`;

exports[`integration test in --dry-run mode runs build for js and rust 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "dryRun >> tauri-bundler [build]: echo the files in the tauri-bundler folder are",
    ],
    Array [
      "dryRun >> tauri-bundler [build]: ls",
    ],
    Array [
      "dryRun >> tauri [build]: echo the files in the tauri folder are",
    ],
    Array [
      "dryRun >> tauri [build]: ls",
    ],
    Array [
      "dryRun >> tauri-api [build]: echo the files in the tauri-api folder are",
    ],
    Array [
      "dryRun >> tauri-api [build]: ls",
    ],
    Array [
      "dryRun >> tauri-utils [build]: echo the files in the tauri-utils folder are",
    ],
    Array [
      "dryRun >> tauri-utils [build]: ls",
    ],
    Array [
      "dryRun >> tauri-updater [build]: echo the files in the tauri-updater folder are",
    ],
    Array [
      "dryRun >> tauri-updater [build]: ls",
    ],
  ],
  "covectorReturn": Object {
    "tauri": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-api": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-bundler": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-updater": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-utils": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri.js": Object {
      "command": false,
      "postcommand": false,
      "precommand": false,
    },
  },
}
`;

exports[`integration test in --dry-run mode runs publish for js and rust 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "Checking if tauri-bundler@0.6.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-bundler [prepublish]: echo premode for tauri-bundler",
    ],
    Array [
      "Checking if tauri@0.5.2 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri@0.5.2 is already published. Skipping.",
    ],
    Array [
      "Checking if tauri-api@0.5.1 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-api [prepublish]: echo premode for tauri-api",
    ],
    Array [
      "Checking if tauri-utils@0.5.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-utils [prepublish]: echo premode for tauri-utils",
    ],
    Array [
      "dryRun >> tauri.js [publish]: echo publishing tauri.js would happen here",
    ],
    Array [
      "Checking if tauri-bundler@0.6.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-bundler [publish]: echo publishing tauri-bundler would happen here",
    ],
    Array [
      "dryRun >> tauri-bundler [publish]: echo running in ./cli/tauri-bundler",
    ],
    Array [
      "dryRun >> tauri-bundler [publish]: ls",
    ],
    Array [
      "Checking if tauri@0.5.2 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri@0.5.2 is already published. Skipping.",
    ],
    Array [
      "Checking if tauri-api@0.5.1 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-api [publish]: echo publishing tauri-api would happen here",
    ],
    Array [
      "dryRun >> tauri-api [publish]: echo running in ./tauri-api",
    ],
    Array [
      "dryRun >> tauri-api [publish]: ls",
    ],
    Array [
      "Checking if tauri-utils@0.5.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-utils [publish]: echo publishing tauri-utils would happen here",
    ],
    Array [
      "dryRun >> tauri-utils [publish]: echo running in ./tauri-utils",
    ],
    Array [
      "dryRun >> tauri-utils [publish]: ls",
    ],
    Array [
      "Checking if tauri-bundler@0.6.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-bundler [postpublish]: echo postmode for tauri-bundler",
    ],
    Array [
      "Checking if tauri@0.5.2 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri@0.5.2 is already published. Skipping.",
    ],
    Array [
      "Checking if tauri-api@0.5.1 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-api [postpublish]: echo postmode for tauri-api",
    ],
    Array [
      "Checking if tauri-utils@0.5.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "dryRun >> tauri-utils [postpublish]: echo postmode for tauri-utils",
    ],
  ],
  "covectorReturn": Object {
    "tauri": Object {
      "command": false,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-api": Object {
      "command": true,
      "postcommand": true,
      "precommand": true,
    },
    "tauri-bundler": Object {
      "command": true,
      "postcommand": true,
      "precommand": true,
    },
    "tauri-updater": Object {
      "command": false,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-utils": Object {
      "command": true,
      "postcommand": true,
      "precommand": true,
    },
    "tauri.js": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
  },
}
`;

exports[`integration test in --dry-run mode runs test for js and rust 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "No commands configured to run on [test].",
    ],
  ],
  "covectorReturn": "No commands configured to run on [test].",
}
`;

exports[`integration test in --dry-run mode runs version for js and rust 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "tauri",
      "pipe",
      Object {
        "pkg": Object {
          "command": true,
          "dependencies": Array [
            "tauri-api",
          ],
          "manager": "rust",
          "path": "./tauri",
          "pkg": "tauri",
          "postcommand": null,
          "precommand": null,
        },
        "release": Object {
          "changes": Array [
            Object {
              "releases": Object {
                "tauri": "minor",
              },
              "summary": "Summary about the changes in tauri",
            },
          ],
          "parents": Array [
            "tauri.js",
          ],
          "type": "minor",
        },
      },
    ],
    Array [
      "tauri-updater",
      "pipe",
      Object {
        "pkg": Object {
          "command": true,
          "dependencies": undefined,
          "manager": "rust",
          "path": "./tauri-updater",
          "pkg": "tauri-updater",
          "postcommand": null,
          "precommand": null,
        },
        "release": Object {
          "changes": Array [
            Object {
              "releases": Object {
                "tauri-updater": "patch",
              },
              "summary": "Summary about the changes in tauri-updater",
            },
          ],
          "parents": Array [],
          "type": "patch",
        },
      },
    ],
    Array [
      "tauri.js",
      "pipe",
      Object {
        "pkg": Object {
          "command": true,
          "dependencies": Array [
            "tauri",
          ],
          "manager": "javascript",
          "path": "./cli/tauri.js",
          "pkg": "tauri.js",
          "postcommand": null,
          "precommand": null,
        },
        "release": Object {
          "changes": Array [
            Object {
              "releases": Object {
                "tauri": "minor",
              },
              "summary": "Summary about the changes in tauri",
            },
          ],
          "parents": Array [],
          "type": "minor",
        },
      },
    ],
    Array [
      "bumping tauri with minor",
    ],
    Array [
      "bumping tauri-updater with patch",
    ],
    Array [
      "bumping tauri.js with minor",
    ],
    Array [
      "tauri planned to be bumped to 0.6.0",
    ],
    Array [
      "tauri.js planned to be bumped to 0.7.0",
    ],
    Array [
      "tauri-updater planned to be bumped to 0.4.3",
    ],
    Array [
      "Could not load the CHANGELOG.md. Creating one.",
    ],
    Array [
      "Could not load the CHANGELOG.md. Creating one.",
    ],
    Array [
      "Could not load the CHANGELOG.md. Creating one.",
    ],
  ],
  "covectorReturn": Array [
    Object {
      "name": "tauri",
      "pkg": Object {
        "build-dependencies": Object {
          "tauri_includedir_codegen": "0.5.2",
        },
        "dependencies": Object {
          "anyhow": "1.0.31",
          "base64": "0.12.1",
          "envmnt": "0.8.2",
          "lazy_static": "1.4.0",
          "phf": "0.8.0",
          "serde": Object {
            "__tomlInline": true,
            "features": Array [
              "derive",
            ],
            "version": "1.0",
          },
          "serde_json": "1.0",
          "tauri-api": Object {
            "__tomlInline": true,
            "path": "../tauri-api",
            "version": "0.5",
          },
          "tauri_includedir": "0.5.0",
          "thiserror": "1.0.19",
          "threadpool": "1.8",
          "tiny_http": Object {
            "__tomlInline": true,
            "optional": true,
            "version": "0.7",
          },
          "uuid": Object {
            "__tomlInline": true,
            "features": Array [
              "v4",
            ],
            "version": "0.8.1",
          },
          "web-view": "=0.6.2",
          "webbrowser": "0.5.2",
          "webview-sys": "=0.5.0",
        },
        "dev-dependencies": Object {
          "proptest": "0.9.6",
          "serde": Object {
            "__tomlInline": true,
            "features": Array [
              "derive",
            ],
            "version": "1.0",
          },
          "serde_json": "1.0",
          "tauri": Object {
            "__tomlInline": true,
            "features": Array [
              "all-api",
              "edge",
            ],
            "path": ".",
          },
        },
        "example": Array [
          Object {
            "name": "communication",
            "path": "examples/communication/src-tauri/src/main.rs",
          },
        ],
        "features": Object {
          "all-api": Array [],
          "copy-file": Array [],
          "create-dir": Array [],
          "edge": Array [
            "web-view/edge",
          ],
          "embedded-server": Array [
            "tiny_http",
          ],
          "event": Array [],
          "execute": Array [],
          "no-server": Array [],
          "open": Array [],
          "open-dialog": Array [],
          "read-binary-file": Array [],
          "read-dir": Array [],
          "read-text-file": Array [],
          "remove-dir": Array [],
          "remove-file": Array [],
          "rename-file": Array [],
          "save-dialog": Array [],
          "set-title": Array [],
          "updater": Array [],
          "write-file": Array [],
        },
        "package": Object {
          "authors": "test",
          "description": "Make tiny, secure apps for all desktop platforms with Tauri",
          "edition": "2018",
          "exclude": Array [
            "test/fixture/**",
          ],
          "homepage": "https://tauri.studio",
          "license": "MIT",
          "metadata": Object {
            "docs": Object {
              "rs": Object {
                "features": Array [
                  "all-api",
                ],
              },
            },
          },
          "name": "tauri",
          "repository": "https://github.com/tauri-apps/tauri",
          "version": "0.6.0",
        },
      },
      "version": "0.6.0",
    },
    Object {
      "name": "tauri.js",
      "pkg": Object {
        "bin": Object {
          "tauri": "./bin/tauri.js",
        },
        "bugs": Object {
          "url": "https://github.com/tauri-apps/tauri/issues",
        },
        "contributors": Array [
          "test",
        ],
        "dependencies": Object {
          "@tauri-apps/tauri-inliner": "1.14.1",
          "@tauri-apps/toml": "2.2.4",
          "chalk": "4.0.0",
          "chokidar": "3.4.0",
          "cross-spawn": "7.0.3",
          "fast-glob": "3.2.2",
          "fs-extra": "9.0.1",
          "http-proxy": "1.18.1",
          "imagemin": "7.0.1",
          "imagemin-optipng": "8.0.0",
          "imagemin-pngquant": "9.0.0",
          "imagemin-zopfli": "7.0.0",
          "is-png": "2.0.0",
          "isbinaryfile": "4.0.6",
          "jsdom": "16.2.2",
          "lodash": "4.17.15",
          "minimist": "1.2.5",
          "ms": "2.1.2",
          "png2icons": "2.0.1",
          "read-chunk": "3.2.0",
          "sharp": "0.25.3",
          "webpack-merge": "4.2.2",
          "webpack-shell-plugin": "0.5.0",
        },
        "description": "Multi-binding collection of libraries and templates for building Tauri apps",
        "devDependencies": Object {
          "@babel/core": "7.10.2",
          "@babel/preset-env": "7.10.2",
          "@babel/preset-typescript": "7.10.1",
          "@types/cross-spawn": "6.0.2",
          "@types/fs-extra": "9.0.1",
          "@types/http-proxy": "1.17.4",
          "@types/imagemin": "7.0.0",
          "@types/imagemin-optipng": "5.2.0",
          "@types/jsdom": "16.2.3",
          "@types/lodash": "4.14.155",
          "@types/ms": "0.7.31",
          "@types/sharp": "0.25.0",
          "@types/webpack-merge": "4.1.5",
          "@typescript-eslint/eslint-plugin": "3.1.0",
          "@typescript-eslint/parser": "3.1.0",
          "babel-jest": "26.0.1",
          "dotenv": "8.2.0",
          "eslint": "7.1.0",
          "eslint-config-standard-with-typescript": "18.0.2",
          "eslint-plugin-import": "2.20.2",
          "eslint-plugin-lodash-template": "0.18.0",
          "eslint-plugin-node": "11.1.0",
          "eslint-plugin-promise": "4.2.1",
          "eslint-plugin-security": "1.4.0",
          "eslint-plugin-standard": "4.0.1",
          "husky": "4.2.5",
          "is-running": "2.1.0",
          "jest": "26.0.1",
          "jest-mock-process": "1.4.0",
          "lint-staged": "10.2.8",
          "lockfile-lint": "4.3.6",
          "promise": "8.1.0",
          "raw-loader": "4.0.1",
          "ts-loader": "7.0.5",
          "typescript": "3.9.3",
          "webpack": "4.43.0",
          "webpack-cli": "3.3.11",
          "webpack-node-externals": "1.7.2",
        },
        "funding": Object {
          "type": "opencollective",
          "url": "https://opencollective.com/tauri",
        },
        "homepage": "https://github.com/tauri-apps/tauri#readme",
        "husky": Object {
          "hooks": Object {
            "pre-commit": "lint-staged",
          },
        },
        "license": "MIT",
        "lint-staged": Array [
          "eslint --fix",
        ],
        "name": "tauri",
        "repository": Object {
          "type": "git",
          "url": "git+https://github.com/tauri-apps/tauri.git",
        },
        "scripts": Object {
          "build": "webpack --progress",
          "build-release": "yarn build --display none --progress false",
          "build:tauri[rust]": "cd ../tauri && TAURI_DIST_DIR=../../test/fixture/dist TAURI_DIR=../test/fixture cargo publish --dry-run --allow-dirty",
          "lint": "eslint --ext ts ./src/**/*.ts",
          "lint-fix": "eslint --fix --ext ts ./src/**/*.ts",
          "lint:lockfile": "lockfile-lint --path yarn.lock --type yarn --validate-https --allowed-hosts npm yarn",
          "prepublishOnly": "yarn build-release",
          "pretest": "yarn build",
          "test": "jest --runInBand --no-cache --testPathIgnorePatterns=\\"(build|dev)\\"",
          "test:local": "jest --runInBand",
        },
        "version": "0.7.0",
      },
      "version": "0.7.0",
    },
    Object {
      "name": "tauri-updater",
      "pkg": Object {
        "dependencies": Object {
          "anyhow": "1.0.31",
          "attohttpc": Object {
            "__tomlInline": true,
            "features": Array [
              "json",
              "compress",
            ],
            "version": "0.10.1",
          },
          "serde": "1.0",
          "serde_json": "1.0",
          "tauri-api": Object {
            "__tomlInline": true,
            "path": "../tauri-api",
            "version": "0.5",
          },
          "tauri-utils": Object {
            "__tomlInline": true,
            "path": "../tauri-utils",
            "version": "0.5",
          },
          "tempdir": "0.3",
          "thiserror": "1.0.19",
          "zip": "0.5.3",
        },
        "package": Object {
          "authors": "test",
          "description": "Updater for Tauri",
          "edition": "2018",
          "exclude": Array [
            "test/fixture/**",
          ],
          "homepage": "https://tauri.studio",
          "license": "MIT",
          "name": "tauri-updater",
          "repository": "https://github.com/tauri-apps/tauri",
          "version": "0.4.3",
        },
      },
      "version": "0.4.3",
    },
  ],
}
`;

exports[`integration test in production mode fails with error 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "tauri.js [publish]: npm publish",
    ],
  ],
}
`;

exports[`integration test in production mode passes correct config for js and rust 1`] = `
Object {
  "consoleDir": Array [
    Array [
      Array [
        Object {
          "releases": Object {
            "tauri": "minor",
          },
          "summary": "Summary about the changes in tauri",
        },
      ],
    ],
    Array [
      Array [
        Object {
          "releases": Object {
            "tauri-updater": "patch",
          },
          "summary": "Summary about the changes in tauri-updater",
        },
      ],
    ],
  ],
  "consoleLog": Array [
    Array [
      "changes:",
    ],
    Array [
      "tauri => minor",
    ],
    Array [
      "tauri-updater => patch",
    ],
  ],
  "covectorReturn": "There are 2 changes which include tauri with minor, tauri-updater with patch",
}
`;

exports[`integration test in production mode runs build for js and rust 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "tauri-bundler [build]: echo the files in the tauri-bundler folder are",
    ],
    Array [
      "the files in the tauri-bundler folder are",
    ],
    Array [
      "tauri-bundler [build]: ls",
    ],
    Array [
      "Cargo.toml",
    ],
    Array [
      "tauri [build]: echo the files in the tauri folder are",
    ],
    Array [
      "the files in the tauri folder are",
    ],
    Array [
      "tauri [build]: ls",
    ],
    Array [
      "Cargo.toml",
    ],
    Array [
      "tauri-api [build]: echo the files in the tauri-api folder are",
    ],
    Array [
      "the files in the tauri-api folder are",
    ],
    Array [
      "tauri-api [build]: ls",
    ],
    Array [
      "Cargo.toml",
    ],
    Array [
      "tauri-utils [build]: echo the files in the tauri-utils folder are",
    ],
    Array [
      "the files in the tauri-utils folder are",
    ],
    Array [
      "tauri-utils [build]: ls",
    ],
    Array [
      "Cargo.toml",
    ],
    Array [
      "tauri-updater [build]: echo the files in the tauri-updater folder are",
    ],
    Array [
      "the files in the tauri-updater folder are",
    ],
    Array [
      "tauri-updater [build]: ls",
    ],
    Array [
      "Cargo.toml",
    ],
  ],
  "covectorReturn": Object {
    "tauri": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-api": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-bundler": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-updater": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-utils": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
    "tauri.js": Object {
      "command": false,
      "postcommand": false,
      "precommand": false,
    },
  },
}
`;

exports[`integration test in production mode runs publish for js and rust 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "Checking if tauri-bundler@0.6.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri-bundler [prepublish]: echo premode for tauri-bundler",
    ],
    Array [
      "premode for tauri-bundler",
    ],
    Array [
      "Checking if tauri@0.5.2 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri@0.5.2 is already published. Skipping.",
    ],
    Array [
      "Checking if tauri-api@0.5.1 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri-api [prepublish]: echo premode for tauri-api",
    ],
    Array [
      "premode for tauri-api",
    ],
    Array [
      "Checking if tauri-utils@0.5.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri-utils [prepublish]: echo premode for tauri-utils",
    ],
    Array [
      "premode for tauri-utils",
    ],
    Array [
      "tauri.js [publish]: echo publishing tauri.js would happen here",
    ],
    Array [
      "publishing tauri.js would happen here",
    ],
    Array [
      "Checking if tauri-bundler@0.6.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri-bundler [publish]: echo publishing tauri-bundler would happen here",
    ],
    Array [
      "publishing tauri-bundler would happen here",
    ],
    Array [
      "tauri-bundler [publish]: echo running in ./cli/tauri-bundler",
    ],
    Array [
      "running in ./cli/tauri-bundler",
    ],
    Array [
      "tauri-bundler [publish]: ls",
    ],
    Array [
      "Cargo.toml",
    ],
    Array [
      "Checking if tauri@0.5.2 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri@0.5.2 is already published. Skipping.",
    ],
    Array [
      "Checking if tauri-api@0.5.1 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri-api [publish]: echo publishing tauri-api would happen here",
    ],
    Array [
      "publishing tauri-api would happen here",
    ],
    Array [
      "tauri-api [publish]: echo running in ./tauri-api",
    ],
    Array [
      "running in ./tauri-api",
    ],
    Array [
      "tauri-api [publish]: ls",
    ],
    Array [
      "Cargo.toml",
    ],
    Array [
      "Checking if tauri-utils@0.5.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri-utils [publish]: echo publishing tauri-utils would happen here",
    ],
    Array [
      "publishing tauri-utils would happen here",
    ],
    Array [
      "tauri-utils [publish]: echo running in ./tauri-utils",
    ],
    Array [
      "running in ./tauri-utils",
    ],
    Array [
      "tauri-utils [publish]: ls",
    ],
    Array [
      "Cargo.toml",
    ],
    Array [
      "Checking if tauri-bundler@0.6.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri-bundler [postpublish]: echo postmode for tauri-bundler",
    ],
    Array [
      "postmode for tauri-bundler",
    ],
    Array [
      "Checking if tauri@0.5.2 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri@0.5.2 is already published. Skipping.",
    ],
    Array [
      "Checking if tauri-api@0.5.1 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri-api [postpublish]: echo postmode for tauri-api",
    ],
    Array [
      "postmode for tauri-api",
    ],
    Array [
      "Checking if tauri-utils@0.5.0 is already published with: echo 0.5.2",
    ],
    Array [
      "0.5.2",
    ],
    Array [
      "tauri-utils [postpublish]: echo postmode for tauri-utils",
    ],
    Array [
      "postmode for tauri-utils",
    ],
  ],
  "covectorReturn": Object {
    "tauri": Object {
      "command": false,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-api": Object {
      "command": true,
      "postcommand": true,
      "precommand": true,
    },
    "tauri-bundler": Object {
      "command": true,
      "postcommand": true,
      "precommand": true,
    },
    "tauri-updater": Object {
      "command": false,
      "postcommand": false,
      "precommand": false,
    },
    "tauri-utils": Object {
      "command": true,
      "postcommand": true,
      "precommand": true,
    },
    "tauri.js": Object {
      "command": true,
      "postcommand": false,
      "precommand": false,
    },
  },
}
`;

exports[`integration test in production mode runs test for js and rust 1`] = `
Object {
  "consoleInfo": Array [],
  "consoleLog": Array [
    Array [
      "No commands configured to run on [test].",
    ],
  ],
  "covectorReturn": "No commands configured to run on [test].",
}
`;

exports[`integration test in production mode runs version for js and rust 1`] = `
Object {
  "consoleInfo": Array [
    Array [
      ".changes/first-change.md was deleted",
    ],
    Array [
      ".changes/second-change.md was deleted",
    ],
  ],
  "consoleLog": Array [
    Array [
      "bumping tauri with minor",
    ],
    Array [
      "bumping tauri-updater with patch",
    ],
    Array [
      "bumping tauri.js with minor",
    ],
    Array [
      "Could not load the CHANGELOG.md. Creating one.",
    ],
    Array [
      "Could not load the CHANGELOG.md. Creating one.",
    ],
    Array [
      "Could not load the CHANGELOG.md. Creating one.",
    ],
  ],
  "covectorReturn": Array [
    Object {
      "name": "tauri",
      "pkg": Object {
        "build-dependencies": Object {
          "tauri_includedir_codegen": "0.5.2",
        },
        "dependencies": Object {
          "anyhow": "1.0.31",
          "base64": "0.12.1",
          "envmnt": "0.8.2",
          "lazy_static": "1.4.0",
          "phf": "0.8.0",
          "serde": Object {
            "__tomlInline": true,
            "features": Array [
              "derive",
            ],
            "version": "1.0",
          },
          "serde_json": "1.0",
          "tauri-api": Object {
            "__tomlInline": true,
            "path": "../tauri-api",
            "version": "0.5",
          },
          "tauri_includedir": "0.5.0",
          "thiserror": "1.0.19",
          "threadpool": "1.8",
          "tiny_http": Object {
            "__tomlInline": true,
            "optional": true,
            "version": "0.7",
          },
          "uuid": Object {
            "__tomlInline": true,
            "features": Array [
              "v4",
            ],
            "version": "0.8.1",
          },
          "web-view": "=0.6.2",
          "webbrowser": "0.5.2",
          "webview-sys": "=0.5.0",
        },
        "dev-dependencies": Object {
          "proptest": "0.9.6",
          "serde": Object {
            "__tomlInline": true,
            "features": Array [
              "derive",
            ],
            "version": "1.0",
          },
          "serde_json": "1.0",
          "tauri": Object {
            "__tomlInline": true,
            "features": Array [
              "all-api",
              "edge",
            ],
            "path": ".",
          },
        },
        "example": Array [
          Object {
            "name": "communication",
            "path": "examples/communication/src-tauri/src/main.rs",
          },
        ],
        "features": Object {
          "all-api": Array [],
          "copy-file": Array [],
          "create-dir": Array [],
          "edge": Array [
            "web-view/edge",
          ],
          "embedded-server": Array [
            "tiny_http",
          ],
          "event": Array [],
          "execute": Array [],
          "no-server": Array [],
          "open": Array [],
          "open-dialog": Array [],
          "read-binary-file": Array [],
          "read-dir": Array [],
          "read-text-file": Array [],
          "remove-dir": Array [],
          "remove-file": Array [],
          "rename-file": Array [],
          "save-dialog": Array [],
          "set-title": Array [],
          "updater": Array [],
          "write-file": Array [],
        },
        "package": Object {
          "authors": "test",
          "description": "Make tiny, secure apps for all desktop platforms with Tauri",
          "edition": "2018",
          "exclude": Array [
            "test/fixture/**",
          ],
          "homepage": "https://tauri.studio",
          "license": "MIT",
          "metadata": Object {
            "docs": Object {
              "rs": Object {
                "features": Array [
                  "all-api",
                ],
              },
            },
          },
          "name": "tauri",
          "repository": "https://github.com/tauri-apps/tauri",
          "version": "0.6.0",
        },
      },
      "version": "0.6.0",
    },
    Object {
      "name": "tauri.js",
      "pkg": Object {
        "bin": Object {
          "tauri": "./bin/tauri.js",
        },
        "bugs": Object {
          "url": "https://github.com/tauri-apps/tauri/issues",
        },
        "contributors": Array [
          "test",
        ],
        "dependencies": Object {
          "@tauri-apps/tauri-inliner": "1.14.1",
          "@tauri-apps/toml": "2.2.4",
          "chalk": "4.0.0",
          "chokidar": "3.4.0",
          "cross-spawn": "7.0.3",
          "fast-glob": "3.2.2",
          "fs-extra": "9.0.1",
          "http-proxy": "1.18.1",
          "imagemin": "7.0.1",
          "imagemin-optipng": "8.0.0",
          "imagemin-pngquant": "9.0.0",
          "imagemin-zopfli": "7.0.0",
          "is-png": "2.0.0",
          "isbinaryfile": "4.0.6",
          "jsdom": "16.2.2",
          "lodash": "4.17.15",
          "minimist": "1.2.5",
          "ms": "2.1.2",
          "png2icons": "2.0.1",
          "read-chunk": "3.2.0",
          "sharp": "0.25.3",
          "webpack-merge": "4.2.2",
          "webpack-shell-plugin": "0.5.0",
        },
        "description": "Multi-binding collection of libraries and templates for building Tauri apps",
        "devDependencies": Object {
          "@babel/core": "7.10.2",
          "@babel/preset-env": "7.10.2",
          "@babel/preset-typescript": "7.10.1",
          "@types/cross-spawn": "6.0.2",
          "@types/fs-extra": "9.0.1",
          "@types/http-proxy": "1.17.4",
          "@types/imagemin": "7.0.0",
          "@types/imagemin-optipng": "5.2.0",
          "@types/jsdom": "16.2.3",
          "@types/lodash": "4.14.155",
          "@types/ms": "0.7.31",
          "@types/sharp": "0.25.0",
          "@types/webpack-merge": "4.1.5",
          "@typescript-eslint/eslint-plugin": "3.1.0",
          "@typescript-eslint/parser": "3.1.0",
          "babel-jest": "26.0.1",
          "dotenv": "8.2.0",
          "eslint": "7.1.0",
          "eslint-config-standard-with-typescript": "18.0.2",
          "eslint-plugin-import": "2.20.2",
          "eslint-plugin-lodash-template": "0.18.0",
          "eslint-plugin-node": "11.1.0",
          "eslint-plugin-promise": "4.2.1",
          "eslint-plugin-security": "1.4.0",
          "eslint-plugin-standard": "4.0.1",
          "husky": "4.2.5",
          "is-running": "2.1.0",
          "jest": "26.0.1",
          "jest-mock-process": "1.4.0",
          "lint-staged": "10.2.8",
          "lockfile-lint": "4.3.6",
          "promise": "8.1.0",
          "raw-loader": "4.0.1",
          "ts-loader": "7.0.5",
          "typescript": "3.9.3",
          "webpack": "4.43.0",
          "webpack-cli": "3.3.11",
          "webpack-node-externals": "1.7.2",
        },
        "funding": Object {
          "type": "opencollective",
          "url": "https://opencollective.com/tauri",
        },
        "homepage": "https://github.com/tauri-apps/tauri#readme",
        "husky": Object {
          "hooks": Object {
            "pre-commit": "lint-staged",
          },
        },
        "license": "MIT",
        "lint-staged": Array [
          "eslint --fix",
        ],
        "name": "tauri",
        "repository": Object {
          "type": "git",
          "url": "git+https://github.com/tauri-apps/tauri.git",
        },
        "scripts": Object {
          "build": "webpack --progress",
          "build-release": "yarn build --display none --progress false",
          "build:tauri[rust]": "cd ../tauri && TAURI_DIST_DIR=../../test/fixture/dist TAURI_DIR=../test/fixture cargo publish --dry-run --allow-dirty",
          "lint": "eslint --ext ts ./src/**/*.ts",
          "lint-fix": "eslint --fix --ext ts ./src/**/*.ts",
          "lint:lockfile": "lockfile-lint --path yarn.lock --type yarn --validate-https --allowed-hosts npm yarn",
          "prepublishOnly": "yarn build-release",
          "pretest": "yarn build",
          "test": "jest --runInBand --no-cache --testPathIgnorePatterns=\\"(build|dev)\\"",
          "test:local": "jest --runInBand",
        },
        "version": "0.7.0",
      },
      "version": "0.7.0",
    },
    Object {
      "name": "tauri-updater",
      "pkg": Object {
        "dependencies": Object {
          "anyhow": "1.0.31",
          "attohttpc": Object {
            "__tomlInline": true,
            "features": Array [
              "json",
              "compress",
            ],
            "version": "0.10.1",
          },
          "serde": "1.0",
          "serde_json": "1.0",
          "tauri-api": Object {
            "__tomlInline": true,
            "path": "../tauri-api",
            "version": "0.5",
          },
          "tauri-utils": Object {
            "__tomlInline": true,
            "path": "../tauri-utils",
            "version": "0.5",
          },
          "tempdir": "0.3",
          "thiserror": "1.0.19",
          "zip": "0.5.3",
        },
        "package": Object {
          "authors": "test",
          "description": "Updater for Tauri",
          "edition": "2018",
          "exclude": Array [
            "test/fixture/**",
          ],
          "homepage": "https://tauri.studio",
          "license": "MIT",
          "name": "tauri-updater",
          "repository": "https://github.com/tauri-apps/tauri",
          "version": "0.4.3",
        },
      },
      "version": "0.4.3",
    },
  ],
}
`;
